RESOLVED FIXED63239
[X11][WK2] plugins/mouse-evets-fixedpos.html is failing because of broken event propagation
https://bugs.webkit.org/show_bug.cgi?id=63239
Summary [X11][WK2] plugins/mouse-evets-fixedpos.html is failing because of broken eve...
Balazs Kelemen
Reported 2011-06-23 02:38:48 PDT
In the event handler methods of NetscapePlugin we return with the return value of NPP_HandleEvent. It has been copied from the Mac implementation. This is wrong since on X11 the plugin return with 0 if it handled the event so we need to revert it. The result of this bug is that we immediately remove the focus from the plugin element just after it has been given to it.
Attachments
Patch (4.33 KB, patch)
2011-06-23 03:07 PDT, Balazs Kelemen
kling: review+
kling: commit-queue-
Balazs Kelemen
Comment 1 2011-06-23 03:07:33 PDT
Balazs Kelemen
Comment 2 2011-06-23 03:51:19 PDT
Current result (without the patch): CONSOLE MESSAGE: line 0: PLUGIN: getFocusEvent CONSOLE MESSAGE: line 0: PLUGIN: mouseDown at (50, 50) CONSOLE MESSAGE: line 0: PLUGIN: loseFocusEvent CONSOLE MESSAGE: line 0: PLUGIN: mouseUp at (50, 50) CONSOLE MESSAGE: line 0: PLUGIN: getFocusEvent CONSOLE MESSAGE: line 0: PLUGIN: mouseDown at (60, 60) CONSOLE MESSAGE: line 0: PLUGIN: loseFocusEvent CONSOLE MESSAGE: line 0: PLUGIN: mouseUp at (70, 60) Tests for widget positions being correctly updated after scrolling. rdar://problem/7559069 Expected result: CONSOLE MESSAGE: line 0: PLUGIN: getFocusEvent CONSOLE MESSAGE: line 0: PLUGIN: mouseDown at (50, 50) CONSOLE MESSAGE: line 0: PLUGIN: mouseUp at (50, 50) CONSOLE MESSAGE: line 0: PLUGIN: mouseDown at (60, 60) CONSOLE MESSAGE: line 0: PLUGIN: mouseUp at (70, 60) Tests for widget positions being correctly updated after scrolling. rdar://problem/7559069
Andreas Kling
Comment 3 2011-07-01 08:41:42 PDT
Comment on attachment 98329 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=98329&action=review I find it suspicious that the return value convention is in violation of https://developer.mozilla.org/en/NPP_HandleEvent but it's indeed what we already do in WebKit1. > Source/WebKit2/ChangeLog:9 > + Revert the return value of NPP_HandleEvent because the plugin function Revert -> Invert
Balazs Kelemen
Comment 4 2011-07-01 09:17:59 PDT
Note You need to log in before you can comment on or make changes to this bug.